# ROS_HIK_SDK

./: .gitignore  README.md
hik_camera/: CMakeLists.txt  package.xml
hik_camera/config/: camera.yaml  camera_info.yaml
hik_camera/include/: DataType.h  DecodeCardSdk.h  HCNetSDK.h  HikCamera.h  plaympeg4.h
hik_camera/launch/: camera.launch
hik_camera/src/: HikCamera.cpp
