<?xml version="1.0"?>
<package format="2">
  <name>hik_camera</name>
  <version>0.0.0</version>
  <description>The hik_camera package</description>
  <maintainer email="halo@todo.todo">halo</maintainer>
  <license>TODO</license>

  <author>SSJ</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <exec_depend>roscpp</exec_depend>

  <build_depend>tf</build_depend>
  <exec_depend>tf</exec_depend>

  <build_depend>std_msgs</build_depend>
  <exec_depend>std_msgs</exec_depend>
  <build_depend>sensor_msgs</build_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <build_depend>geometry_msgs</build_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <build_depend>nav_msgs</build_depend>
  <exec_depend>nav_msgs</exec_depend>
  <build_depend>visualization_msgs</build_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <build_depend>roslaunch</build_depend>
  <exec_depend>message_runtime</exec_depend>

</package>